objects/ccrz__E_RequestForQuote__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Requests For Quote</relationshipLabel>
        <relationshipName>CC_Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipName>Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ccrz__FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LeadSource__c</fullName>
        <label>Lead Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LeadStatus__c</fullName>
        <label>LeadStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__NextStep__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OpportunityName__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OpportunityType__c</fullName>
        <label>Opportunity Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__StageName__c</fullName>
        <label>Stage Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>CC Request For Quote</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RFQ-{000000}</displayFormat>
        <label>RFQ Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Requests For Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>